--- a/tekniskfysik.html
+++ b/tekniskfysik.html
@@ -11,14 +11,14 @@
     <nav>
         <ul>
             <li><a href="index.html">Hem</a></li>
-            <li><a href="idrott.html">Hockey</a></li>
             <li>
                 <a>Akademi ⬇</a>
                 <ul class="dropdown">
-                    <li><a href="tekniskfysik.html">Chalmers</a></li>
-                    <li><a href="ekonomi.html">Göteborgs universitet</a></li>
+                    <li><a href="tekniskfysik.html">Teknisk Fysik</a></li>
+                    <li><a href="ekonomi.html">Ekonomi</a></li>
                 </ul>
             </li>
+            <li><a href="idrott.html">Hockey</a></li>
         </ul>
 
     </nav>
@@ -35,8 +35,8 @@
             <p class="description">Inledande analys av differenetialkalkyl och integralkalkyl</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 6</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
             </div>            
         </div>
 
@@ -47,7 +47,7 @@
             <p class="description">Vektorer, matriser, linjära system och egenvärden.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
+                <span class="credits">HP: 6</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
             </div>
         </div>
@@ -57,18 +57,18 @@
             <p class="description">Fördjupning i analys med serier och konvergens.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
+                <span class="credits">HP: 6</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
             </div>   
         </div>
 
         <div class="box">
             <h2>FYSIKINGENJÖRENS VERKTYG</h2>
-            <p class="description">Laborationer och praktiska metoder i fysik.</p>
+            <p class="description">Laborationer och praktiska metoder i fysik, introduktion till linux.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 9</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐☆☆☆</span>
             </div>   
         </div>
 
@@ -77,7 +77,7 @@
             <p class="description">Differential- och integralkalkyl i flera variabler.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
+                <span class="credits">HP: 6</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
             </div>   
         </div>
@@ -87,8 +87,8 @@
             <p class="description">Klassisk mekanik: rörelse, krafter och energiprinciper.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 7,5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐☆☆</span>
             </div>   
         </div>
 
@@ -97,8 +97,8 @@
             <p class="description">Avancerad mekanik: rörelse, krafter och energiprinciper.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 6</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
             </div>   
         </div>
 
@@ -108,27 +108,27 @@
             <p class="description">Grundläggande sannolikhetsteori och statistiska metoder.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
+                <span class="credits">HP: 4,5</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
             </div>   
         </div>
 
         <div class="box">
             <h2>PROGRAMMERINGSTEKNIK OCH NUMERISK ANALYS</h2>
-            <p class="description">Grundläggande programmering och numeriska metoder.</p>
+            <p class="description">Grundläggande programmering och numeriska metoder i python med fokus på numpy och andra matematiska bibliotek.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 9</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
             </div>   
         </div>
 
         <div class="box">
             <h2>KOMPLEX ANALYS</h2>
-            <p class="description">Analys av funktioner av en komplex variabel.</p>
+            <p class="description">Analys av funktioner, mappningar och operationer med komplexa variabler.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
+                <span class="credits">HP: 6</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
             </div>   
         </div>
@@ -138,28 +138,28 @@
              <p class="description">Analys av elektriska nätverk och signalöverföring.</p>
              <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
+                <span class="credits">HP: 7,5</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
             </div> 
         </div>
 
         <div class="box">
             <h2>Bayesiansk inferens och maskininlärning</h2>
-             <p class="description">Analys av elektriska nätverk och signalöverföring.</p>
+             <p class="description">Neurala nätverk, hur man matematiskt lär från data, bayesiansk statistik och Markov-kedjor.</p>
              <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 6</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
             </div> 
         </div>
 
         <div class="box">
             <h2>REGLERTEKNIK</h2>
-             <p class="description">Analys av elektriska nätverk och signalöverföring.</p>
+             <p class="description">Analys av olika systems styrning, framförallt återkopplade system.</p>
              <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 4,5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐☆☆</span>
             </div> 
         </div>
 
@@ -168,8 +168,8 @@
             <p class="description">Fourier-serier och transform för signal- och systemanalys.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 6</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
             </div> 
         </div>
 
@@ -179,8 +179,8 @@
             <p class="description">Maxwells ekvationer och elektromagnetiska fält.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 9</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
             </div> 
         </div>
 
@@ -189,17 +189,17 @@
             <p class="description">Ljusets natur, vågor och geometrisk optik.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
-                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+                <span class="credits">HP: 6</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐☆☆</span>
             </div> 
         </div>   
 
         <div class="box">
             <h2>KONTINUUMMEKANIK</h2>
-            <p class="description">Ljusets natur, vågor och geometrisk optik.</p>
+            <p class="description">Matematiken och fysiken som rör deformation i material och rörelse i fluider.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
-                <span class="credits">HP: 7.5</span>
+                <span class="credits">HP: 6</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
             </div> 
         </div>   
