--- a/ekonomi.html
+++ b/ekonomi.html
@@ -2,6 +2,7 @@
 <head>
     <title>Carl Örnberg Teknisk Fysik</title>
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="tekniskfysik.css">
     <meta charset="UTF-8">
 
 
@@ -10,17 +11,66 @@
     <nav>
         <ul>
             <li><a href="index.html">Hem</a></li>
-            <li><a href="idrott.html">Hockey</a></li>
             <li>
                 <a>Akademi ⬇</a>
                 <ul class="dropdown">
-                    <li><a href="tekniskfysik.html">Chalmers</a></li>
-                    <li><a href="ekonomi.html">Göteborgs universitet</a></li>
+                    <li><a href="tekniskfysik.html">Teknisk Fysik</a></li>
+                    <li><a href="ekonomi.html">Ekonomi</a></li>
                 </ul>
             </li>
+            <li><a href="idrott.html">Hockey</a></li>
         </ul>
 
     </nav>
+
+    <header>
+        <h1>Samtliga kurser jag läst inom ekonomi</h1>
+    </header>
+
+
+    <main>
+
+        <div class="box">
+            <h2>ORGANISATION OCH LEDARSKAP</h2>
+            <p class="description">Hur organisationer fungerar och hur effektivt ledarskap påverkar medarbetare och verksamhetens resultat.</p>
+            <div class="course-info">
+                <span class="grade">Betyg: C</span>
+                <span class="credits">HP: 7,5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐☆☆☆</span>
+            </div>            
+        </div>
+
+        <div class="box">
+            <h2>MARKNADSFÖRING</h2>
+            <p class="description">Introduktion till marknadsföringsstrategier, konsumentbeteende och hur företag positionerar sina produkter på marknaden</p>
+            <div class="course-info">
+                <span class="grade">Betyg: D</span>
+                <span class="credits">HP: 7,5</span>
+                <span class="personal">Personlig uppskattning: ⭐☆☆☆☆</span>
+            </div>            
+        </div>
+
+        <div class="box">
+            <h2>EXTERNREDOVISNING</h2>
+            <p class="description">Grundläggande principer för bokföring och rapportering till externa intressenter, såsom årsredovisning och finansiell analys.</p>
+            <div class="course-info">
+                <span class="grade">Betyg: E</span>
+                <span class="credits">HP: 7,5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
+            </div>            
+        </div>
+
+        <div class="box">
+            <h2>EKONOMISTYRNING</h2>
+            <p class="description">Hur företag planerar, styr och kontrollerar resurser för att uppnå ekonomiska mål och fatta beslut.</p>
+            <div class="course-info">
+                <span class="grade">Betyg: E</span>
+                <span class="credits">HP: 7,5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+            </div>            
+        </div>
+
+    </main>
 </body>
 
 
