added videos on idrott

--- a/tekniskfysik.html
+++ b/tekniskfysik.html
@@ -115,7 +115,7 @@
 
         <div class="box">
             <h2>PROGRAMMERINGSTEKNIK OCH NUMERISK ANALYS</h2>
-            <p class="description">Grundläggande programmering och numeriska metoder i python med fokus på numpy och andra matematiska bibliotek.</p>
+            <p class="description">Programmering och numeriska metoder i python med fokus på numpy och andra matematiska bibliotek.</p>
             <div class="course-info">
                 <span class="grade">Betyg: 5</span>
                 <span class="credits">HP: 9</span>
