--- a/idrott.html
+++ b/idrott.html
@@ -98,7 +98,7 @@
 
             <div class="video-container">
                 <video controls autoplay muted loop>
-                    <source src="Bilder till personlig webbsida\IMG_2602.mov" type="video/mp4">
+                    <source src="pictures\IMG_2602.mov" type="video/mp4">
                      Din webbläsare stödjer inte video-taggen.
                 </video>
             </div>
