spelling and logic misstakes

--- a/tekniskfysik.html
+++ b/tekniskfysik.html
@@ -66,7 +66,7 @@
             <h2>FYSIKINGENJÖRENS VERKTYG</h2>
             <p class="description">Laborationer och praktiska metoder i fysik, introduktion till linux.</p>
             <div class="course-info">
-                <span class="grade">Betyg: 5</span>
+                <span class="grade">Betyg: G</span>
                 <span class="credits">HP: 9</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐☆☆☆</span>
             </div>   
@@ -117,7 +117,7 @@
             <h2>PROGRAMMERINGSTEKNIK OCH NUMERISK ANALYS</h2>
             <p class="description">Programmering och numeriska metoder i python med fokus på numpy och andra matematiska bibliotek.</p>
             <div class="course-info">
-                <span class="grade">Betyg: 5</span>
+                <span class="grade">Betyg: G</span>
                 <span class="credits">HP: 9</span>
                 <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
             </div>   
