--- a/tekniskfysik.html
+++ b/tekniskfysik.html
@@ -204,6 +204,26 @@
             </div> 
         </div>   
 
+        <div class="box">
+            <h2>KVANTFYSIK</h2>
+            <p class="description">Behandlar fysikens lagar på atomär och subatomär nivå, där vågfunktioner och sannolikhetsfördelningar beskriver hur partiklar beter sig.</p>
+            <div class="course-info">
+                <span class="grade">Betyg: 5</span>
+                <span class="credits">HP: 9</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐☆☆</span>
+            </div> 
+        </div>  
+        
+        <div class="box">
+            <h2>TERMODYNAMIK OCH STATISTISK MEKANIK</h2>
+            <p class="description">Termodynamik beskriver energins omvandlingar och systemens jämviktstillstånd och statistisk mekanik förklarar dessa makroskopiska fenomen utifrån sannolikhetsfördelningar för många partiklar.</p>
+            <div class="course-info">
+                <span class="grade">Betyg: 5</span>
+                <span class="credits">HP: 7.5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐☆☆</span>
+            </div> 
+        </div>   
+
 
 
 
