--- a/ekonomi.html
+++ b/ekonomi.html
@@ -70,6 +70,26 @@
             </div>            
         </div>
 
+        <div class="box">
+            <h2>MIKROEKONOMI</h2>
+            <p class="description">Analyserar hur individer och företag fattar beslut under begränsningar, samt hur marknader sätter priser och allokerar resurser.</p>
+            <div class="course-info">
+                <span class="grade">Betyg: B</span>
+                <span class="credits">HP: 7,5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐☆</span>
+            </div>            
+        </div>
+
+        <div class="box">
+            <h2>EKONOMISTYRNING</h2>
+            <p class="description">Studerar ekonomin som helhet, inklusive inflation, arbetslöshet, ekonomisk tillväxt och hur politiska beslut påverkar dessa storheter.</p>
+            <div class="course-info">
+                <span class="grade">Betyg: B</span>
+                <span class="credits">HP: 7,5</span>
+                <span class="personal">Personlig uppskattning: ⭐⭐⭐⭐⭐</span>
+            </div>            
+        </div>
+
     </main>
 </body>
 
