--- a/ekonomi.html
+++ b/ekonomi.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="box">
-            <h2>EKONOMISTYRNING</h2>
+            <h2>MAKROEKONOMI</h2>
             <p class="description">Studerar ekonomin som helhet, inklusive inflation, arbetslöshet, ekonomisk tillväxt och hur politiska beslut påverkar dessa storheter.</p>
             <div class="course-info">
                 <span class="grade">Betyg: B</span>
