Changed intro text and the style of the text

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             <h1 id="Carl">Carl Örnberg</h1>
         
 
-            <p>Jag är intresserad av naturvetenskap, teknik och idrott. 
-            Idag studerar jag teknisk fysik på Chalmers tekniska högskola och fristående
-            kurser i ekonomi på GU. 
-            </p>
+            <p>
+Jag studerar Teknisk Fysik vid Chalmers och kompletterar detta med ekonomi vid Handelshögskolan i Göteborg. Vid sidan av studierna är jag Junior Engineer i Chalmers Formula Student, Quantitative Analyst i Chalmers Capital Management och privatlärare på Allakando. Jag spelar också hockey i Chalmers Rangers.
+</p>
+
+
 
 
 
